--- a/its-my-life-front/public/index.html
+++ b/its-my-life-front/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="./initialize.css" />
     <title>잇츠 마이 라이프 - 나의 라이프 타임 스케쥴러</title>
   </head>
   <body>
